--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-	"name": "vite-min-template",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"lint": "biome check ./src",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"@mantine/core": "^7.10.0",
-		"@mantine/hooks": "^7.10.0",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.7.3",
-		"@types/react": "^18.3.3",
-		"@types/react-dom": "^18.3.0",
-		"@vitejs/plugin-react": "^4.2.1",
-		"postcss": "^8.4.38",
-		"postcss-preset-mantine": "^1.15.0",
-		"postcss-simple-vars": "^7.0.1",
-		"typescript": "^5.4.2",
-		"vite": "^5.1.6"
-	},
-	"packageManager": "yarn@4.2.2"
+    "name": "vite-min-template",
+    "private": true,
+    "version": "0.0.2",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "lint": "biome check",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@mantine/core": "^7.13.4",
+        "@mantine/hooks": "^7.13.4",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
+    },
+    "devDependencies": {
+        "@biomejs/biome": "1.7.3",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.2.1",
+        "postcss": "^8.4.38",
+        "postcss-preset-mantine": "^1.15.0",
+        "postcss-simple-vars": "^7.0.1",
+        "typescript": "^5.4.2",
+        "vite": "^5.2.14"
+    },
+    "packageManager": "yarn@4.2.2"
 }
